Fix search on mobile

--- a/resources/sass/frontend/chunks/_header.scss
+++ b/resources/sass/frontend/chunks/_header.scss
@@ -243,7 +243,7 @@ $header-height: 70px;
   @extend .content-wrapper;
   flex-grow: 1;
   .search-form-wrapper {
-    display: none;
+    display: flex;
     width: 100%;
     max-width: 720px;
     margin-left: auto;
