--- a/resources/sass/partials/_textfield.scss
+++ b/resources/sass/partials/_textfield.scss
@@ -3,11 +3,15 @@
   border-radius: 0;
   border: none;
   outline: none;
-  padding-left: 40px;
+  padding-left: 10px;
   @include text-usual(14px, $black, left);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-grow: 1;
   margin-bottom: 10px;
+
+  @include for-tablet-landscape-up() {
+    padding-left: 40px;
+  }
 }
 
 .textfield {
